test(vguide): use Java 21 first-element access